--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#header__link" class="link header__link">Узнать</a></p>
       <img src="./images/header-image.png" class="header__main-illustration" alt="опять двойка">
-      <div class="header__square-pic header__square-pic_animation_rotation"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main>
       <section class="description">
@@ -28,46 +28,48 @@
       </section>
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
-        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
-          <div class="cards__item">
-            <img class="cards__image" src="./images/attention.png" alt="два вида понимая">
-            <h3 class="cards__title">Два вида внимания</h3>
-            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-          </div>
-          <div class="cards__item">
-            <img class="cards__image" src="./images/recall.png" alt="призыв">
-            <h3 class="cards__title">Recall</h3>
-            <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
-          </div>
-          <div class="cards__item">
-            <img class="cards__image" src="./images/interliving.png" alt="интерливинг">
-            <h3 class="cards__title">Интерливинг</h3>
-            <p class="cards__description">Изучайте несколько навыков одновременно,они обогощают друг друга.</p>
-          </div>
-          <div class="cards__item">
-            <img class="cards__image" src="./images/question.png" alt="вопросы">
-            <h3 class="cards__title">Вопросы</h3>
-            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-          </div>
-          <div class="cards__item">
-            <img class="cards__image" src="./images/competence.png" alt="иллюзия компетентности">
-            <h3 class="cards__title">Иллюзия компетентности</h3>
-            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-          </div>
+          <ul class="cards__item">
+            <li><img class="cards__image" src="./images/attention.png" alt="два вида понимая"></li>
+            <li><h3 class="cards__title">Два вида внимания</h3></li>
+            <li><p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p></li>
+          </ul>
+          <ul class="cards__item">
+            <li><img class="cards__image" src="./images/recall.png" alt="призыв"></li>
+            <li><h3 class="cards__title">Recall</h3></li>
+            <li><p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p></li>
+          </ul>
+          <ul class="cards__item">
+            <li><img class="cards__image" src="./images/interliving.png" alt="интерливинг"></li>
+            <li><h3 class="cards__title">Интерливинг</h3></li>
+            <li><p class="cards__description">Изучайте несколько навыков одновременно,они обогощают друг друга.</p></li>
+          </ul>
+          <ul class="cards__item">
+            <li><img class="cards__image" src="./images/question.png" alt="вопросы"></li>
+            <li><h3 class="cards__title">Вопросы</h3></li>
+            <li><p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p></li>
+          </ul>
+          <ul class="cards__item">
+            <li><img class="cards__image" src="./images/competence.png" alt="иллюзия компетентности"></li>
+            <li><h3 class="cards__title">Иллюзия компетентности</h3></li>
+            <li><p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p></li>
+          </ul>
         </div>
       </section>
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
-        <h3 class="section-subtitle">Для тех, кто любит прокарстинировать</h3>
-        <div class="video__iframes">
-          <div class="video__iframe">
-            <iframe style="border: 0;" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-          <div class="video__iframe">
-            <iframe style="border: 0;" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY?start=9" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </div>  
+        <p class="section-subtitle">Для тех, кто любит прокарстинировать</p>
+        <ul class="video__iframes">
+          <li class="video__li">
+            <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+          </li>
+          <li class="video__li">
+            <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY?start=9" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+          </li>
+        </ul>  
       </section>
       <section class="oakley">
           <article class="two-columns">
@@ -84,49 +86,49 @@
       </section>
       <section class="degits">
         <h2 class="section-title">Цифры и факты</h2>
-        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <div class="table">
-          <div class="table__cell">
-            <h4 class="table__heading">86 миллиардов</h4>
-            <p class="table__text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">2,1 миллиарда</h4>
-            <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text">Всемирный банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">1000 терабайт</h4>
-            <p class="table__text">Объём памяти человека</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">500 триллионов</h4>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">420 миллионов </h4>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text">Всемирный банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">17-20 лет</h4>
-            <p class="table__text">Пик обучаемости</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">1885 год</h4>
-            <p class="table__text">Открытие кривой забвения</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">1889 год</h4>
-            <p class="table__text">Открытие условного рефлекса</p>
-          </div>
+          <ul class="table__cell">
+            <li><h3 class="table__heading">86 миллиардов</h3></li>
+            <li><p class="table__text">Число нейронов в мозге человека</p></li>
+          </ul>
+          <ul class="table__cell">
+            <li><h3 class="table__heading">2,1 миллиарда</h3></li>
+            <li><p class="table__text">Число нуждающихся в повышении квалификации</p></li>
+            <li><p class="table__text">Всемирный банк, 2017</p></li>
+          </ul>
+          <ul class="table__cell">
+            <li><h3 class="table__heading">1000 терабайт</h3></li>
+            <li><p class="table__text">Объём памяти человека</p></li>
+          </ul>
+          <ul class="table__cell">
+            <li><h3 class="table__heading">500 триллионов</h3></li>
+            <li><p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p></li>
+          </ul>
+          <ul class="table__cell">
+            <li><h3 class="table__heading">420 миллионов </h3></li>
+            <li><p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p></li>
+            <li><p class="table__text">Всемирный банк, 2017</p></li>
+          </ul>
+          <ul class="table__cell">
+            <li><h3 class="table__heading">17-20 лет</h3></li>
+            <li><p class="table__text">Пик обучаемости</p></li>
+          </ul>
+          <ul class="table__cell">
+            <li><h3 class="table__heading">1885 год</h3></li>
+            <li><p class="table__text">Открытие кривой забвения</p></li>
+          </ul>
+          <ul class="table__cell">
+            <li><h3 class="table__heading">1889 год</h3></li>
+            <li><p class="table__text">Открытие условного рефлекса</p></li>
+          </ul>
         </div>
       </section>
       <section class="khan">
         <div class="khan__container">
           <h3 class="khan__author">Салман Хан</h3>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -136,61 +138,61 @@
         </div>
       </section>
       <section class="kaufman" id="header__link">
-        <div class="kaufman__triangle kaufman__triangle_animation_rotation"></div>
+        <div class="kaufman__triangle rotation"></div>
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">1</h3>
-            <p class="table__text table__text_theme_dark">Выберете привлекательный проект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">2</h3>
-            <p class="table__text table__text_theme_dark">Сосредоточтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">3</h3>
-            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">4</h3>
-            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">5</h3>
-            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">6</h3>
-            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">7</h3>
-            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">8</h3>
-            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">9</h3>
-            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">10</h3>
-            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-          </div>
+          <ol class="table__cell table__cell_theme_dark">
+            <li><h3 class="table__heading table__heading_theme_dark">1</h3></li>
+            <li><p class="table__text table__text_theme_dark">Выберете привлекательный проект.</p></li>
+          </ol>
+          <ol class="table__cell table__cell_theme_dark">
+            <li><h3 class="table__heading table__heading_theme_dark">2</h3></li>
+            <li><p class="table__text table__text_theme_dark">Сосредоточтесь на каком-то одном навыке.</p></li>
+          </ol>
+          <ol class="table__cell table__cell_theme_dark">
+            <li><h3 class="table__heading table__heading_theme_dark">3</h3></li>
+            <li><p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p></li>
+          </ol>
+          <ol class="table__cell table__cell_theme_dark">
+            <li><h3 class="table__heading table__heading_theme_dark">4</h3></li>
+            <li><p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p></li>
+          </ol>
+          <ol class="table__cell table__cell_theme_dark">
+            <li><h3 class="table__heading table__heading_theme_dark">5</h3></li>
+            <li><p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p></li>
+          </ol>
+          <ol class="table__cell table__cell_theme_dark">
+            <li><h3 class="table__heading table__heading_theme_dark">6</h3></li>
+            <li><p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p></li>
+          </ol>
+          <ol class="table__cell table__cell_theme_dark">
+            <li><h3 class="table__heading table__heading_theme_dark">7</h3></li>
+            <li><p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p></li>
+          </ol>
+          <ol class="table__cell table__cell_theme_dark">
+            <li><h3 class="table__heading table__heading_theme_dark">8</h3></li>
+            <li><p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p></li>
+          </ol>
+          <ol class="table__cell table__cell_theme_dark">
+            <li><h3 class="table__heading table__heading_theme_dark">9</h3></li>
+            <li><p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p></li>
+          </ol>
+          <ol class="table__cell table__cell_theme_dark">
+            <li><h3 class="table__heading table__heading_theme_dark">10</h3></li>
+            <li><p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p></li>
+          </ol>
         </div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
-        <div class="resources__logo-zone">
-          <a href="#"><img class="resources__link" src="./images/arzamas.svg" alt="арзамас"></a>
-          <a href="#"><img class="resources__link" src="./images/n1.svg" alt="н+1"></a>
-          <a href="#"><img class="resources__link" src="./images/strelka.svg" alt="стрелка"></a>
-          <a href="#"><img class="resources__link" src="./images/polka.svg" alt="полка"></a>
-        </div>
+        <ul class="resources__logo-zone">
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="./images/arzamas.svg" alt="арзамас"></a></li>
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="./images/n1.svg" alt="н+1"></a></li>
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="./images/strelka.svg" alt="стрелка"></a></li>
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="./images/polka.svg" alt="полка"></a></li>
+        </ul>
       </section>
     </main>
     <!-- Footer -->
